[gd_scene load_steps=4 format=3 uid="uid://doljldtucijlb"]

[ext_resource type="Script" path="res://object/menu/Main Menu.gd" id="1_11u3i"]
[ext_resource type="Texture2D" uid="uid://wridp66qfelq" path="res://image/logo.png" id="1_n3ka7"]
[ext_resource type="Theme" uid="uid://bwcqpqf070sl8" path="res://themes/Default_UI.tres" id="3_1lfuc"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_11u3i")

[node name="Head" type="Sprite2D" parent="."]
position = Vector2(1090, 202)
rotation = -0.349066
scale = Vector2(4, 4)
texture = ExtResource("1_n3ka7")

[node name="Button1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.5
offset_top = -216.0
offset_right = 295.5
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_1lfuc")
text = "MAP - Test"
icon = ExtResource("1_n3ka7")

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.5
offset_top = -68.0
offset_right = 295.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_1lfuc")
text = "MAP - Train"
icon = ExtResource("1_n3ka7")

[connection signal="pressed" from="Button1" to="." method="_on_button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button2_pressed"]
